Created Logo.png, LLM and LICENSE.txt; Edited settings; Deleted Form1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,8 +1,9 @@
 unique_ids:
   forms:
-    Form1: ZY4SOYILBW2423SSO6ES44O2NL5ZN2NV
+    LLM: ZY4SOYILBW2423SSO6ES44O2NL5ZN2NV
   modules: {}
   server_modules: {}
   assets:
+    Logo.png: '1697562377866173989709476.2406'
     standard-page.html: JNPIPNZRSQNLA2ZXDQLS3LSRW4MHLTJ4
     theme.css: SYGBO4NVO5XXV4B6JBGG3YVHMEHOQGOS
