--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,12 +1,14 @@
-allow_embedding: false
-package_name: M3_App_1
-name: M3 App 1
-startup_form: Form1
-renamed: true
-runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox,
-  server_spec: null}
 dependencies: []
 services:
 - source: /runtime/services/tables.yml
   client_config: {}
   server_config: {}
+startup: {type: form, module: LLM}
+package_name: LLM_Website_Application
+allow_embedding: false
+name: LLM Website Application
+runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox,
+  server_spec: null}
+metadata: {logo_img: 'asset:Logo.png'}
+startup_form: null
+renamed: true
