--- a/client_code/LLM/form_template.yaml
+++ b/client_code/LLM/form_template.yaml
@@ -12,3 +12,16 @@ components:
   properties: {}
   name: navbar_links
   layout_properties: {slot: nav-right}
+- name: text_box_1
+  properties: {text: LLM Style Guide Editor, background: 'theme:Primary'}
+  type: TextBox
+  layout_properties: {slot: title}
+- name: column_panel_1
+  properties: {background: 'theme:Secondary'}
+  type: ColumnPanel
+  layout_properties: {slot: left-nav}
+  components:
+  - name: column_panel_2
+    properties: {}
+    type: ColumnPanel
+    layout_properties: {grid_position: 'WUVTNF,TURPLM'}
